Extract support and tests from package
Support and test files were placed within the package directories, they
are removed from them, testing of the package is now done within a
Docker, that can be discontinued.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.0"
 services:
   test:
     build:
-      context: ../..
+      context: .
       dockerfile: Dockerfile
     command: >
-      bash -c "cd gobcore && sh ./test.sh"
+      bash -c "./test.sh"
