--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 atomicwrites==1.1.5
 attrs==18.1.0
 flake8==3.5.0
+GeoAlchemy2==0.5.0
+gobcore==0.1
 mccabe==0.6.1
 mock==2.0.0
 more-itertools==4.3.0
+numpy==1.15.1
+pandas==0.23.4
 pbr==4.2.0
 pika==0.12.0
 pluggy==0.7.1
@@ -11,5 +15,7 @@ py==1.5.4
 pycodestyle==2.3.1
 pyflakes==1.6.0
 pytest==3.7.2
+python-dateutil==2.7.3
+pytz==2018.5
 six==1.11.0
 SQLAlchemy==1.2.11
