--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 atomicwrites==1.1.5
 attrs==18.1.0
+click==6.7
 coverage==4.5.1
 flake8==3.5.0
 GeoAlchemy2==0.5.0
+geomet==0.2.0.post2
 mccabe==0.6.1
 mock==2.0.0
 more-itertools==4.3.0
