--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flake8==3.5.0
 GeoAlchemy2==0.5.0
 geomet==0.2.0.post2
 -e git+https://github.com/Amsterdam/objectstore.git@v1.0#egg=datapunt-objectstore
+ijson==2.3
 mccabe==0.6.1
 mock==2.0.0
 more-itertools==4.3.0
