--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ atomicwrites==1.2.1
 attrs==18.2.0
 click==6.7
 coverage==4.5.1
+cryptography==2.8
 cx-Oracle==7.1.2
 flake8==3.5.0
 GeoAlchemy2==0.5.0
