--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coverage==4.5.1
 cryptography==2.8
 pycryptodome==3.9.4
 cx-Oracle==7.1.2
+xlrd==1.2.0
 flake8==3.5.0
 GeoAlchemy2==0.5.0
 geomet==0.2.0.post2
