--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pycryptodome==3.9.4
 cx-Oracle==7.3.0
 xlrd==1.2.0
 flake8==3.8.4
-GDAL==2.4.4
+GDAL==${LIBGDAL_VERSION}
 GeoAlchemy2==0.5.0
 geomet==0.2.0.post2
 datapunt-objectstore==2020.9.7
