--- a/requirements.txt
+++ b/requirements.txt
@@ -7,23 +7,22 @@ xlrd==1.2.0
 flake8==3.8.4
 GDAL==${LIBGDAL_VERSION}
 GeoAlchemy2==0.5.0
-geomet==0.2.0.post2
+geomet==0.3.0
 python-swiftclient==3.12.0
 python-keystoneclient==4.2.0
 jsonschema==3.2.0
 ijson==2.3
 mock==2.0.0
-more-itertools==4.3.0
+more-itertools==8.8.0
 pandas==1.2.5
-paramiko==2.7.1
-pbr==4.2.0
+paramiko==2.7.2
 pika==0.12.0
 psycopg2-binary==2.9.1
 pyjwt==1.7.1
 pyodbc==4.0.30
-pytest==6.2.2
-pytest-cov==2.11.1
-requests==2.20.0
-six==1.11.0
+pytest==6.2.4
+pytest-cov==2.12.1
+requests==2.26.0
+six==1.16.0
 Shapely==1.7.1
 SQLAlchemy==1.3.24
