--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,67 @@
 atomicwrites==1.2.1
+attrs==21.2.0
+bcrypt==3.2.0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
 click==6.7
+coverage==5.5
 cryptography==3.3.2
-pycryptodome==3.9.4
 cx-Oracle==7.3.0
-xlrd==1.2.0
+debtcollector==2.2.0
 flake8==3.8.4
 GDAL==${LIBGDAL_VERSION}
 GeoAlchemy2==0.5.0
 geomet==0.3.0
-python-swiftclient==3.12.0
-python-keystoneclient==4.2.0
-jsonschema==3.2.0
+idna==3.2
 ijson==2.3
+iniconfig==1.1.1
+iso8601==0.1.16
+jsonschema==3.2.0
+keystoneauth1==4.3.1
+mccabe==0.6.1
 mock==2.0.0
 more-itertools==8.8.0
+msgpack==1.0.2
+netaddr==0.8.0
+netifaces==0.11.0
+numpy==1.21.1
+os-service-types==1.7.0
+oslo.config==8.7.1
+oslo.i18n==5.0.1
+oslo.serialization==4.1.0
+oslo.utils==4.9.2
+packaging==21.0
 pandas==1.2.5
 paramiko==2.7.2
+pbr==5.6.0
 pika==0.12.0
+pluggy==0.13.1
 psycopg2-binary==2.9.1
-pyjwt==1.7.1
+py==1.10.0
+pycodestyle==2.6.0
+pycparser==2.20
+pycryptodome==3.9.4
+pyflakes==2.2.0
+PyJWT==1.7.1
+PyNaCl==1.4.0
 pyodbc==4.0.30
+pyparsing==2.4.7
+pyrsistent==0.18.0
 pytest==6.2.4
 pytest-cov==2.12.1
+python-dateutil==2.8.2
+python-keystoneclient==4.2.0
+python-swiftclient==3.12.0
+pytz==2021.1
+PyYAML==5.4.1
 requests==2.26.0
-six==1.16.0
+rfc3986==1.5.0
 Shapely==1.7.1
+six==1.16.0
 SQLAlchemy==1.3.24
+stevedore==3.3.0
+toml==0.10.2
+urllib3==1.26.6
+wrapt==1.12.1
+xlrd==1.2.0
