--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ charset-normalizer==2.0.4
 click==6.7
 coverage==5.5
 cryptography==3.3.2
-cx-Oracle==7.3.0
+cx-Oracle~=8.3.0
 debtcollector==2.2.0
 flake8==3.8.4
 GDAL==${LIBGDAL_VERSION}
@@ -37,7 +37,7 @@ paramiko==2.7.2
 pbr==5.6.0
 pika==0.12.0
 pluggy==0.13.1
-psycopg2-binary==2.9.3
+psycopg2~=2.9.0
 py==1.10.0
 pycodestyle==2.6.0
 pycparser==2.20
@@ -59,7 +59,7 @@ requests==2.26.0
 rfc3986==1.5.0
 Shapely==1.7.1
 six==1.16.0
-SQLAlchemy==1.4.29
+SQLAlchemy~=1.4.0
 stevedore==3.3.0
 toml==0.10.2
 urllib3==1.26.6
