--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ paramiko==2.7.2
 pbr==5.6.0
 pika==0.12.0
 pluggy==0.13.1
-psycopg2~=2.9.0
+psycopg2==2.9.2
 py==1.10.0
 pycodestyle==2.6.0
 pycparser==2.20
