--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,8 @@ py==1.10.0
 pycodestyle==2.6.0
 pycparser==2.20
 pycryptodome==3.9.4
+pydantic==1.9.1
+pydash==5.1.0
 pyflakes==2.2.0
 PyJWT==2.4.0
 PyNaCl==1.4.0
