--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ msgpack==1.0.2
 netaddr==0.8.0
 netifaces==0.11.0
 numpy==1.22.1
+openpyxl==3.0.10
 os-service-types==1.7.0
 oslo.config==8.7.1
 oslo.i18n==5.0.1
@@ -66,4 +67,3 @@ stevedore==3.3.0
 toml==0.10.2
 urllib3==1.26.6
 wrapt==1.12.1
-xlrd==1.2.0
