--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,70 @@
-atomicwrites==1.2.1
-attrs==21.2.0
-bcrypt==3.2.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.4
-click==7.1.2
-coverage==5.5
-cryptography==36.0.1
+atomicwrites==1.4.1
+attrs==22.1.0
+bcrypt==4.0.1
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.1.3
+coverage==6.5.0
+cryptography==38.0.4
 cx-Oracle~=8.3.0
-debtcollector==2.2.0
-flake8==3.8.4
+debtcollector==2.5.0
+flake8==6.0.0
 GDAL==${LIBGDAL_VERSION}
-GeoAlchemy2==0.5.0
-geomet==0.3.0
-idna==3.2
-ijson==2.3
+GeoAlchemy2==0.12.5
+geomet==1.0.0
+idna==3.4
+ijson==3.1.4
 iniconfig==1.1.1
-iso8601==0.1.16
-jsonschema==3.2.0
-keystoneauth1==4.3.1
-mccabe==0.6.1
-mock==2.0.0
-more-itertools==8.8.0
-msgpack==1.0.2
+iso8601==1.1.0
+jsonschema==4.17.3
+keystoneauth1==5.1.0
+mccabe==0.7.0
+mock==4.0.3
+more-itertools==9.0.0
+msgpack==1.0.4
 munch==2.5.0
 netaddr==0.8.0
 netifaces==0.11.0
-numpy==1.22.1
+numpy==1.23.5
 openpyxl==3.0.10
 os-service-types==1.7.0
-oslo.config==8.7.1
-oslo.i18n==5.0.1
-oslo.serialization==4.1.0
-oslo.utils==4.10.2
-packaging==21.0
-pandas==1.2.5
-paramiko==2.10.3
-pbr==5.6.0
-pika==0.12.0
-pluggy==0.13.1
-psycopg2==2.9.2
-py==1.10.0
-pycodestyle==2.6.0
-pycparser==2.20
-pycryptodome==3.9.4
-pydantic==1.9.1
-pydash==5.1.0
-pyflakes==2.2.0
-PyJWT==2.4.0
-PyNaCl==1.4.0
-pyodbc==4.0.30
-pyparsing==2.4.7
-pyrsistent==0.18.0
-pytest==6.2.4
-pytest-cov==2.12.1
+oslo.config==9.0.0
+oslo.i18n==5.1.0
+oslo.serialization==5.0.0
+oslo.utils==6.1.0
+packaging==22.0
+pandas==1.5.2
+paramiko==2.12.0
+pbr==5.11.0
+pika==1.3.1
+pluggy==1.0.0
+psycopg2==2.9.5
+py==1.11.0
+pycodestyle==2.10.0
+pycparser==2.21
+pycryptodome==3.16.0
+pydantic==1.10.2
+pydash==5.1.2
+pyflakes==3.0.1
+PyJWT==2.6.0
+PyNaCl==1.5.0
+pyodbc==4.0.35
+pyparsing==3.0.9
+pyrsistent==0.19.2
+pytest==7.2.0
+pytest-cov==4.0.0
 python-dateutil==2.8.2
-python-keystoneclient==4.2.0
-python-swiftclient==3.12.0
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.26.0
-rfc3986==1.5.0
-Shapely==1.8.0
+python-keystoneclient==5.0.1
+python-swiftclient==4.1.0
+pytz==2022.6
+PyYAML==6.0
+requests==2.28.1
+rfc3986==2.0.0
+Shapely==1.8.5.post1
 six==1.16.0
 SQLAlchemy~=1.4.0
-stevedore==3.3.0
+stevedore==4.1.1
 toml==0.10.2
-urllib3==1.26.6
-wrapt==1.12.1
+urllib3==1.26.13
+wrapt==1.14.1
