--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,6 @@ pytest-cov==4.0.0
 python-dateutil==2.8.2
 python-swiftclient==4.1.0
 requests==2.28.1
+Shapely==1.8.5.post1
 SQLAlchemy~=1.4.0
 urllib3==1.26.13
