--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 cryptography==38.0.4
-cx-Oracle~=8.3.0
 flake8==6.0.0
 GDAL==${LIBGDAL_VERSION}
 GeoAlchemy2==0.12.5
@@ -7,6 +6,7 @@ geomet==1.0.0
 ijson==3.1.4
 munch==2.5.0
 openpyxl==3.0.10
+oracledb~=1.2.1
 pandas==1.5.2
 paramiko==2.12.0
 pika==1.3.1
