--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      # temporary branch for brk2
+      REPO_BASE: "https://raw.githubusercontent.com/Amsterdam/amsterdam-schema/brk2_active_dataset"
     command: >
       bash -c "./test.sh"
