--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.7"
 
 services:
   test:
+    container_name: gobcore
+    platform: linux/amd64
     build:
       context: .
       dockerfile: Dockerfile
