--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ PyJWT==2.6.0
 pyodbc==4.0.35
 pytest==7.2.0
 python-dateutil==2.8.2
+python-keystoneclient~=5.0.1
 python-swiftclient==4.1.0
 requests==2.28.1
 Shapely==1.8.5.post1
