--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
-cryptography==38.0.4
+cryptography~=39.0.0
 GDAL==${LIBGDAL_VERSION}
-GeoAlchemy2==0.12.5
+GeoAlchemy2==0.13.1
 geomet==1.0.0
-ijson~=3.2.0.post0
+ijson~=3.2.0
 munch==2.5.0
-openpyxl==3.0.10
+openpyxl~=3.1.0
 oracledb~=1.2.1
-pandas==1.5.2
+pandas~=1.5.3
 paramiko==2.12.0
 pika==0.13.1
 psycopg2==2.9.5
-pycryptodome==3.16.0
+pycryptodome==3.17
 pydantic~=1.10.3
-pydash==5.1.2
+pydash~=6.0.0
 PyJWT==2.6.0
 pyodbc==4.0.35
 python-dateutil==2.8.2
 python-keystoneclient~=5.0.1
 python-swiftclient==4.1.0
-requests==2.28.1
+requests~=2.28.2
 Shapely==1.8.5.post1
 SQLAlchemy~=1.4.0
-urllib3==1.26.13
+urllib3~=1.26.14
 
 # Test requirements
-black~=22.12.0
-coverage~=7.0.1
+black~=23.1.0
+coverage~=7.1.0
 flake8~=6.0.0
-flake8-docstrings~=1.6.0
+flake8-docstrings~=1.7.0
 flake8-pyproject~=1.2.2
-isort~=5.11.4
+isort~=5.12.0
 mypy==0.991
-pytest==7.2.0
+pytest~=7.2.1
