--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
-cryptography~=39.0.0
+cryptography~=39.0.2
 GDAL==${LIBGDAL_VERSION}
 GeoAlchemy2==0.13.1
 geomet==1.0.0
 ijson~=3.2.0
 munch==2.5.0
-openpyxl~=3.1.0
-oracledb~=1.2.1
-orjson~=3.8.3
+openpyxl~=3.1.1
+oracledb~=1.2.2
+orjson~=3.8.7
 pandas~=1.5.3
 paramiko==2.12.0
 pika==0.13.1
 psycopg2==2.9.5
 pycryptodome==3.17
-pydantic~=1.10.3
-pydash~=6.0.0
+pydantic~=1.10.6
+pydash~=6.0.2
 PyJWT==2.6.0
 pyodbc==4.0.35
 python-dateutil==2.8.2
-python-keystoneclient~=5.0.1
-python-swiftclient==4.1.0
+python-keystoneclient~=5.1.0
+python-swiftclient==4.2.0
 requests~=2.28.2
 Shapely==1.8.5.post1
-SQLAlchemy~=1.4.0
+SQLAlchemy~=1.4.46
 urllib3~=1.26.14
 
 # Test requirements
 black~=23.1.0
-coverage~=7.1.0
+coverage~=7.2.1
 flake8~=6.0.0
 flake8-docstrings~=1.7.0
 flake8-pyproject~=1.2.2
 isort~=5.12.0
-mypy==0.991
-pytest~=7.2.1
+mypy~=1.1.1
+pytest~=7.2.2
