--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ GeoAlchemy2~=0.14.1
 geomet==1.0.0
 ijson~=3.2.3
 openpyxl~=3.1.2
-oracledb~=1.3.2
-orjson~=3.9.2
+oracledb~=1.4.1
+orjson~=3.9.7
 pandas~=1.5.3
 paramiko==2.12.0
 pika==0.13.1
-psycopg2~=2.9.6
+psycopg2~=2.9.7
 pycryptodome==3.18.0
 pydantic~=1.10.12
 pydash~=7.0.6
@@ -17,19 +17,19 @@ PyJWT==2.8.0
 pyodbc==4.0.39
 python-dateutil==2.8.2
 python-keystoneclient~=5.1.0
-python-swiftclient==4.3.0
+python-swiftclient~=4.4.0
 requests~=2.31.0
 Shapely==1.8.5.post1
 SQLAlchemy~=1.4.49
 urllib3~=1.26.16
 
 # Test requirements
-black~=23.7.0
-coverage~=7.2.7
+black~=23.9.0
+coverage~=7.3.1
 flake8~=6.1.0
 flake8-docstrings~=1.7.0
 Flake8-pyproject~=1.2.3
 isort~=5.12.0
 munch~=4.0.0
-mypy~=1.4.1
-pytest~=7.4.0
+mypy~=1.5.1
+pytest~=7.4.2
