--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ Homepage = "https://github.com/Amsterdam/GOB-Core"
 Repository = "https://github.com/Amsterdam/GOB-Core"
 
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=42,<70", "wheel>=0.41,<0.42"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
